--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sink ships</title>
+
+    <link rel="preload stylesheet" href="/src/style.css" as="style">
   </head>
   <body>
     <div id="counter"></div>
