Add some tests and a basic ship position function

--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
         <title>sink ships</title>
 
-        <link rel="preload stylesheet" href="/src/style.css" as="style" />
+        <link
+            rel="preload stylesheet"
+            href="/src/style.css"
+            as="style"
+        />
     </head>
     <body>
         <div id="counter"></div>
         <div id="field"></div>
-        <div id="successMessage" aria-hidden="true">
+        <div
+            id="successMessage"
+            aria-hidden="true"
+        >
             Congratulations, you have hit all ships!
         </div>
 
-        <script type="module" src="/src/main.ts"></script>
+        <script
+            type="module"
+            src="/src/main.ts"
+        ></script>
     </body>
 </html>
