Add ship placement logic

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         >
             Congratulations, you have hit all ships!
         </div>
+        <div
+            id="error"
+            aria-hidden="true"
+        ></div>
 
         <script
             type="module"
