Add some wrapper code

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             aria-hidden="true"
         >
             Congratulations, you have hit all ships!
+            <button
+                type="button"
+                onclick="() => location.reload()"
+            >
+                retry
+            </button>
         </div>
         <div
             id="error"
