--- a/index.html
+++ b/index.html
@@ -15,20 +15,12 @@
         />
     </head>
     <body>
-        <div id="counter"></div>
+        <div id="controlPanel"></div>
         <div id="field"></div>
         <div
             id="successMessage"
             aria-hidden="true"
-        >
-            Congratulations, you have hit all ships!
-            <button
-                type="button"
-                onclick="() => location.reload()"
-            >
-                retry
-            </button>
-        </div>
+        ></div>
         <div
             id="error"
             aria-hidden="true"
