--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>sink ships</title>
+        <title>Battleship</title>
 
         <link
             rel="preload stylesheet"
